# railway-template

./: .env.template  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.yml  railway.toml
.github/workflows/: ci.yml
src/: Makefile  pyproject.toml
src/api/: views.py
src/config/: __init__.py  settings.py  urls.py
